fix(scripts): 为subprocess.run指定utf-8编码
修复在非默认编码环境下运行release.py脚本可能导致的编码错误。
更新文档以包含手动发布Git项目的步骤。

--- a/docs/备忘录.md
+++ b/docs/备忘录.md
@@ -10,8 +10,13 @@ go run cmd/gocron/gocron.go web -e dev
 cd web/vue ; pnpm run dev
 ```
 
-## 发布项目
+## Git项目
 
 ```python
+# 手动提交
+git commit -m "feat: xxx"
+git tag -a v1.4.10 -m "Release v1.4.10"
+git push origin v1.4.10
+# 或者自动提交
 python ./scripts/release.py --version v1.5.4 --message "chore: release v1.5.4"
 ```
