--- a/docs/备忘录.md
+++ b/docs/备忘录.md
@@ -7,6 +7,8 @@ go run cmd/gocron/gocron.go web -e dev
 ## 前端运行
 
 ```bash
+pnpm -C web/vue run dev
+# 或者执行
 cd web/vue ; pnpm run dev
 ```
 
@@ -20,3 +22,9 @@ git push origin v1.4.10
 # 或者自动提交
 python ./scripts/release.py --version v1.5.4 --message "chore: release v1.5.4"
 ```
+
+## 测试运行
+
+测试账号：testuser
+测试账号密码：Testuser123
+http://localhost:8080
