docs: 添加gocron节点重新注册的操作说明
在备亡录中补充如何彻底删除并重新注册gocron节点的详细步骤，包括删除定时任务、节点、停止docker以及删除安装目录的操作命令，并添加了对应的操作截图。

--- a/docs/备忘录.md
+++ b/docs/备忘录.md
@@ -28,3 +28,22 @@ python ./scripts/release.py --version v1.5.4 --message "chore: release v1.5.4"
 测试账号：testuser
 测试账号密码：Testuser123
 http://localhost:8080
+
+## 重新注册
+
+gocron-node是项目的核心应用，是通过项目web页面`任务节点-自动注册`的命令行安装的，安装后存放到了系统opt/gocron-node目录中。
+
+- 删除定时任务
+- 删除任务节点
+- 停止docker
+- 在终端中删除gocron-node
+
+```bash
+sudo -i # 进入管理员权限
+cd ..
+cd opt
+ls
+rm -rf gocron-node # 删除文件夹及对应文件
+```
+
+![自动注册](docs\images\20260213 删除gocron node并重新注册.png)
