docs: 在备份文档中添加cron和gocron截图
添加两张说明图片，展示cron表达式编写示例和gocron界面截图，以便更直观地指导用户配置定时任务。

--- a/docs/备忘录.md
+++ b/docs/备忘录.md
@@ -47,3 +47,5 @@ rm -rf gocron-node # 删除文件夹及对应文件
 ```
 
 ![自动注册](docs\images\20260213 删除gocron node并重新注册.png)
+![cron怎么写](docs\images\20260213 cron怎么写.png)
+![gocron截图](docs\images\20260213 gocron截图.png)
